# git-acquire

./: .flake8  .gitignore  .pre-commit-config.yaml  ChangeLog.md  README.md  git-acquire  pyproject.toml  setup.cfg  tasks.py
.github/: CODEOWNERS
scripts/: maintainer.py
src/git_acquire/: __init__.py  __main__.py  acquire.py
