# Copyright (c) 2022 SanCloud Ltd
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = git-acquire
version = attr: git_acquire.__version__
maintainer = Paul Barker
maintainer_email = paul.barker@sancloud.com
license = Apache-2.0 AND CC-BY-4.0 AND CC0-1.0
license_files =
    LICENSES/Apache-2.0.txt
    LICENSES/CC-BY-4.0.txt
    LICENSES/CC0-1.0.txt
description = Efficient acquisition of a git branch/tag/commit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sancloudltd/git-acquire
project_urls =
    Bug Tracker = https://github.com/sancloudltd/git-acquire/issues
platform = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    git-acquire = git_acquire.__main__:main
